Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-3004

Qpid does not compile cleanly with clang++ compiler (2.8)

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    Description

      The Clang project C++ compiler has got to the point where it can now compile the qpid C++ code.

      There are some advantages of using this compiler over the GCC compiler that we've previously been using for Unix compiles:
      Much better error messages:
      Faster compiles
      and of course there are disadvantages too.

      In general I believe there is no portable code just ported code, but code that compiles under the most environments will naturally be the most portable and I'd assert the most bug free too. Therefore I think it is to the benefit of the Qpid if we get the C++ code to compile under clang++ too.

      Currently there appear to be a vast number of warnings of the form:

      In file included from ../../src-working/cpp/src/qpid/client/SessionImpl.h:35:
      ./qpid/framing/AMQP_ClientOperations.h:54:30: warning: extra ';' inside a class [-pedantic]
      ConnectionHandler(){};
      ^

      [You'll note that there is an indicator of where in the line the error occurs too as well as just the line no. - the variable pitch font messes it up though]

      And there are some smaller number of actual compile errors.

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            Unassigned Unassigned
            astitcher Andrew Stitcher
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment