QPID-3004: Get Clang to compile qpid c++ - Fixed constness when getting message property

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1101176 13f79535-47bb-0310-9956-ffa450edef68